tests/ui/foreign_let_mut.stderr
Error [E0009]: Lex does not use `let mut`
  --> tests/ui/foreign_let_mut.lex:2:5
    |
  2 |     let mut count = 1;
    |     ^^^
 Why: a binding is `val` if it never changes, or `var` if it can
 Fix: replace `let mut` with `var`
