tests/ui/foreign_let_mut.lex
fn main() {
    let mut count = 1;
    count += 1;
    print(count);
}
